--- a/src/Components/Inventory/Inventory.css
+++ b/src/Components/Inventory/Inventory.css
@@ -1,4 +1,9 @@
 .book-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row-gap: 5vh;
+}
+
+.book-title {
+  height: 35px;
 }
