Adds BookDetails component, install sass and delete css files

--- a/src/Components/Inventory/Inventory.scss
+++ b/src/Components/Inventory/Inventory.scss
@@ -7,3 +7,13 @@
 .book-title {
   height: 35px;
 }
+
+.book-info {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+img {
+  width: fit-content;
+}
