--- a/src/Components/Inventory/Inventory.scss
+++ b/src/Components/Inventory/Inventory.scss
@@ -1,6 +1,8 @@
+@import '../App/App.scss';
+
 .book-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-row-gap: 5vh;
 }
 
@@ -12,8 +14,12 @@
   display: flex;
   flex-flow: column;
   align-items: center;
+  @include scales;
+  border-radius: 20px;
+  width: 80vw;
+  // background: rgb(210, 212, 42);
 }
 
 img {
-  width: fit-content;
+  height: 20vh;
 }
