--- a/src/Components/Inventory/Inventory.scss
+++ b/src/Components/Inventory/Inventory.scss
@@ -2,8 +2,8 @@
 
 .book-container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-row-gap: 5vh;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 5vh;
 }
 
 .book-title {
@@ -15,7 +15,6 @@
   flex-flow: column;
   align-items: center;
   border-radius: 20px;
-  width: 80vw;
   background: rgb(210, 212, 42);
 }
 
