Adds variable for color pallette and background image

--- a/src/Components/Inventory/Inventory.scss
+++ b/src/Components/Inventory/Inventory.scss
@@ -15,7 +15,7 @@
   flex-flow: column;
   align-items: center;
   border-radius: 20px;
-  background: rgb(210, 212, 42);
+  background: $white-green;
 }
 
 img {
