New color for book info boxes, add border and margin to header

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,7 +1,10 @@
 @import '../App/App.scss';
 
 header {
-  background: rgb(210, 212, 42);
+  border: 5px solid $black-green;
+  background: $white-green;
+  padding: 2vh;
+  margin-block-end: 4vh;
 }
 
 .active {
