--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -12,3 +12,9 @@ header {
     background-color: darkgrey;
   }
 }
+
+h1 {
+  font-size: 80px;
+  margin-block-start: 0em;
+  margin-block-end: 0.33em;
+}
