--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -12,12 +12,14 @@ header {
     height: 5vh;
     border: 0.1em solid #000000;
     margin: 0 0.2em 0.2em 0;
+    padding-bottom: 1.4em;
     border-radius: 0.12em;
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Roboto',sans-serif;
     font-weight: 800;
-    color: #000000;
+    font-size: 20px;
+    color: #000000;;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     text-align: center;
     transition: all 0.15s;
