--- a/src/Components/Inventory/Inventory.scss
+++ b/src/Components/Inventory/Inventory.scss
@@ -21,6 +21,7 @@
   border: 1em  double $medium-green;
   background: $white-green;
   width: 40vw;
+  justify-content: space-between;
   box-shadow: 1px 1px 2px black;
  button {
     display:inline-block;
