--- a/src/Components/Inventory/Inventory.scss
+++ b/src/Components/Inventory/Inventory.scss
@@ -14,6 +14,10 @@
   color:black;
 }
 
+.cover-btn {
+  display: inline;
+}
+
 .book-info {
   display: flex;
   flex-flow: column;
@@ -64,6 +68,34 @@
   margin-left: 3em;
   font-size: 20px;
 }
+a {
+  text-decoration: none;
+}
+
+button {
+    display:inline-block;
+    padding:0.46em 1.6em;
+    padding-bottom: 1.4em;
+    height: 5vh;
+    border:0.1em solid #000000;
+    margin:0 0.2em 0.2em 0;
+    border-radius:0.12em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:800;
+    font-size: 20px;
+    color:white;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align:center;
+    transition: all 0.15s;
+    background-color:#2ea44f;
+    &:hover{
+      text-shadow: 0 0 2em rgba(255,255,255,1);
+      color:#FFFFFF;
+      border-color:#FFFFFF;
+    }
+  }
 
 @media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
 @media (min-width:481px)  { 
