Adds dynamic title for each type of reptile

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -9,6 +9,7 @@ header {
   button {
     color: #000000;
     background-color: #D6C73C;
+    font-size: 30px;
   }
 }
 
@@ -29,7 +30,7 @@ h1 {
     height: 10vh;
   }
   img {
-    height: 10vh;
+    height: 35vh;
     width: 19vw;
   }
   display: flex;
