adds prop types and unit tests for EmbeddedBook and Header

--- a/src/Components/Inventory/Inventory.scss
+++ b/src/Components/Inventory/Inventory.scss
@@ -58,6 +58,7 @@ button {
     font-family:'Roboto',sans-serif;
     font-weight:800;
     font-size: 20px;
+    width: 39vw;
     color:white;
     text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
     text-align:center;
