Adds check if no author exists

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -30,6 +30,7 @@ h1 {
   font-weight: 900;
   -webkit-text-stroke: .1px black;
   color: white;
+  text-shadow: 3px 3px 2px black;
 }
 
 .reptile-image {
